# six-sigma-webapp

./: .env.example  .gitignore  README.md  logfire_auto_tracing.py  pyproject.toml  pytest.ini
app/: botocore_client.py  main.py  settings.py  test_main.py  tools.py
